# cloud

./: .gitignore  .pre-commit-config.yaml  Bakefile  Makefile  Pipfile  ansible.cfg  certificates.yml  configure.yml  consul.yml  local.yml  prometheus.yml  provision.yml  pyproject.toml  registry.yml  requirements.txt  requirements.yml
.github/workflows/: main.yml
environments/: droplets  local
environments/develop/: Vagrantfile  dev  hosts  provision
environments/develop/group_vars/: all.yml  loadbalancers.yml  servers.yml
environments/develop/host_vars/: alpha.yml  bravo.yml  delta.yml  dev.yml
environments/digitalocean/: hosts
environments/digitalocean/group_vars/: all.yml
environments/digitalocean/host_vars/: alpha.yml  localhost.yml
environments/group_vars/: all.yml
environments/host_vars/: alpha.yml  localhost.yml
environments/production/: cluster  hosts  provision
environments/production/group_vars/: all.yml  servers.yml
environments/production/host_vars/: alpha.yml
playbooks/cluster/: configure.yml  k8s.yml  secrets.yml  service-discovery.yml  swarm.yml
playbooks/develop/: configure.yml
playbooks/provision/: bootstrap.yml  certificates.yml
roles/: requirements.yml
roles/common/defaults/: main.yml
roles/common/handlers/: main.yml
roles/common/tasks/: locale.yml  logrotate.yml  main.yml  nodejs.yml  python.yml  ssh.yml  swap.yml  zsh.yml
roles/consul/defaults/: main.yml
roles/consul/handlers/: main.yml
roles/consul/tasks/: docker.yml  loadbalancer.yml  main.yml
roles/consul/templates/: config.json.j2  consul.json.j2  (+4 more)
(+81 files in other folders)
