[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cloud"
version = "0.2.0"
description = "Collection of Ansible playbooks"
authors = ["Kirill Sumorokov"]

[tool.poetry.dependencies]
ansible = "^2.10.0"
ansible-modules-hashivault = "^4.5.6"
hvac = "^0.9.6"
passlib = "^1.7.2"
psycopg2-binary = "^2.8.4"
python = "^3.8"
jinja2 = "^2.11.1"
pyyaml = "^5.3.1"
